LaserTracking/ros2_ws/log/build_2025-04-13_22-46-26/picar_control/stderr.log
  File "/home/chen/Laser/LaserTracking/ros2_ws/install/picar_control/lib/python3.10/site-packages/picar_control/lidar_publisher.py", line 54
    self.lidar.stop
                   ^
SyntaxError: expected 'except' or 'finally' block

